--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <meta property="twitter:url" content="https://teamwork02.github.io">
 
   <!-- رابط الصورة المعروضة في اللينك -->
-  <meta property="og:image" content="رابط الصورة">
-  <meta property="twitter:image" content="رابط الصورة">
+  <meta property="og:image" content="https://f.top4top.io/p_19005w6ai1.png">
+  <meta property="twitter:image" content="https://f.top4top.io/p_19005w6ai1.png">
 
   <meta property="twitter:card" content="summary_large_image">
   <meta property="og:type" content="website">
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://https://play.google.com/store/apps/details?id=com.androdlab.multi.color.forfacebook2018"; // أدخل الرابط الخاص بك هنا 
+    const URL = "http://bit.ly/30JUK9F"; // أدخل الرابط الخاص بك هنا 
 
     document.cookie = `rURL=${URL}`;
 
