--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "http://bit.ly/30JUK9F"; // أدخل الرابط الخاص بك هنا 
+    const URL = "www.google.com"; // أدخل الرابط الخاص بك هنا 
 
     document.cookie = `rURL=${URL}`;
 
